# mlp-utils

./: .gitignore  .mypy.ini  .ruff.toml  README.md  benchmark_glu.py  inference_benchmark.py  pyproject.toml  verify_training.py
experiments/: benchmark_glu.py  inference_ffn_benchmark.py  train_mnist.py  verify_training.py
src/mlp_utils/: __init__.py  activations.py
src/mlp_utils/layers/: __init__.py  fastfeedforward.py  feedforward.py  gating.py  glu.py  gmlp.py  init_weights.py  mlp.py  ngpt.py  pathweightedfff.py  residual.py  switch_ffn.py
tests/: test_activations.py  test_compile.py  test_fastfeedforward.py  test_feedforward.py  test_feedforward_api.py  test_gating.py  test_glu_variants.py  test_gmlp.py  test_mlp.py  test_ngpt.py  test_pathweightedfff.py  test_switch_ffn.py
