[project]
name = "mlp-utils"
version = "0.1.0"
description = "MLP utils"
authors = [
    {name = "Greg DeVosNouri", email = ""}
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=7.2.2",
    "pytest-flakefinder>=1.0.0",
    "pytest-subtests>=0.11.0",
    "pytest-xdist>=3.3.1",
    "pytest-cov>=4.0.0",
    "parameterized>=0.8.1",
    "mypy>=1.10.0",
    "ruff>=0.6.5",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/mlp_utils"]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
]

